Feito estrutura do 'index.html' e dado estilo inicial.

--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>F4Bank</title>
 </head>
 <body>
-    <header>
+    <header class="container-header">
         <nav>
-            <div>
+            <div class="logo">
                 <a>
                     LOGO
                 </a>
             </div>
-            <div>
+            <div class="container-links">
                 <a href="#">
                     link1
                 </a>
