--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header class="container-header">
         <nav>
             <div class="logo">
-                <a>
-                    LOGO
+                <a href="#">
+                    <img src="/epps-landing-page1/img/f4bank.png" id="img-logo" alt="">
                 </a>
             </div>
             <div class="container-links">
@@ -26,9 +26,34 @@
     </header>
 
     <main>
-        <div>
-            conteúdo do site
-        </div>
+        <section class="container-section">
+            <div id="logo-conteudo">
+                <img src="/epps-landing-page1/img/f4bank.png" alt="">
+            </div>
+
+            <div id="conteudo-home">
+                O F4Bank é um projeto de um grande banco público brasileiro para competir
+                com as startups que tem surgido, como Nubank, Banco Inter e Banco Neon. 
+                Você precisa criar uma landing page que comunique, além da proposta do banco, 
+                os produtos "Cartão sem taxa" e "Conta corrente digital", reforçando a segurança 
+                de um banco tradicional com décadas de história no país. 
+            </div>
+        </section>
+        <section class="container-section">
+            <div id="container-center">
+                <img src="/epps-landing-page1/img/mulher-cartao1.jpg" id="img-main" alt="">
+            </div>
+            <div class="conteudo-h2">
+                <div>
+                    <h2>Cartão de crédito sem juros e sem anuidade!</h2>
+                </div>
+            </div>
+        </section>
+
+        <section class="container-section">
+
+        </section>
+        
     </main>
 
     <footer>
