Feito parte da última seção do site. Faltando ainda colocar link para redirecionar para página sobre o produto. Faltando também criar as outras páginas do site.

--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
                 </a>
             </div>
             <div class="container-links">
-                <a href="#">
-                    link1
-                </a>
-                <a href="#">
-                    link2
-                </a>
+                <ul>
+                    <a href="#"><li>F4CARD</li></a>
+                    <a href="#"><li>SOBRE</li></a>
+                </ul>
             </div>
         </nav>
     </header>
@@ -50,8 +48,26 @@
             </div>
         </section>
 
-        <section class="container-section">
+        <section class="container-section" id="section-bottom">
+            <div id="container-bottom">
+                <img src="/epps-landing-page1/img/mulher-cartao2.jpg" id="img-pessoa" alt="">
+            </div>
 
+            <div id="contaudo-section-botton">
+
+                <h2>
+                    Gostou? Quer saber mais sobre o nosso cartão?
+                    Clica no link abaixa para ter todas as informações
+                    de como solicitar o mesmo! É rapidinho!
+                </h2>
+                <!-- <form action="#">
+                    <label for="nome">Nome: </label>
+                    <input type="text" name="nome" id="nome">
+
+                    <label for="email">E-mail: </label>
+                    <input type="email" name="email" id="email">
+                </form> -->
+            </div>
         </section>
         
     </main>
