Criando pagina Produtos

--- a/produtos.html
+++ b/produtos.html
@@ -3,9 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="produtos.css">
+    <title>F4Bank</title>
 </head>
 <body>
-    
+    <header class="container-header">
+        <nav>
+            <div class="logo">
+                <a href="#">
+                    <img src="./img/f4bank.png" id="img-logo" alt="">
+                </a>
+            </div>
+            <div class="container-links">
+                <ul>
+                    <a href="./produtos.html"><li>F4CARD</li></a>
+                    <a href="#"><li>SOBRE</li></a>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <section id="app-background" class="container-section">
+            <div id="conteudo1-home">
+                Tudo que vc precisa na palma de sua mão. Faça pagamentos,depósitos e transferencias
+                sem complicação e filas. Tudo pelo
+                AppF4Bank!!!  
+            </div>            
+
+            <div id="conteudo2-home">
+                Peça a sua conta e seu cartão de credito
+                <form action="" class="adquirir-form">
+                    <input type="text" placeholder="CPF">
+                    <button>Adquirir</button>
+                </form> 
+            </div>
+        </section>
+        <section id="img-main" class="container-section">
+            <div class="conteudo-h2">
+                <div>
+                    <h2>Cartão de crédito sem juros e sem anuidade!</h2>
+                </div>
+            </div>
+        </section>
+
+        <section class="container-section" id="section-bottom">
+            <div id="container-bottom">
+                <img src="./img/pessoa.jpg" id="img-pessoa" alt="">
+            </div>
+
+            <div id="conteudo-section-botton">
+                <h2>
+                    Gostou? Quer saber mais sobre o nosso cartão?
+                    Clica no link abaixa para ter todas as informações
+                    de como solicitar o mesmo! É rapidinho!
+                </h2>
+                <!-- <form action="#">
+                    <label for="nome">Nome: </label>
+                    <input type="text" name="nome" id="nome">
+
+                    <label for="email">E-mail: </label>
+                    <input type="email" name="email" id="email">
+                </form> -->
+            </div>
+        </section>
+        
+    </main>
+
+    <footer>
+        <div>
+            rodapé
+        </div>
+    </footer>
 </body>
 </html>
