--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <nav>
             <div class="logo">
                 <a href="#">
-                    <img src="/epps-landing-page1/img/f4bank.png" id="img-logo" alt="">
+                    <img src="./img/f4bank.png" id="img-logo" alt="">
                 </a>
             </div>
             <div class="container-links">
                 <ul>
-                    <a href="#"><li>F4CARD</li></a>
+                    <a href="./produtos.html"><li>F4CARD</li></a>
                     <a href="#"><li>SOBRE</li></a>
                 </ul>
             </div>
@@ -26,7 +26,7 @@
     <main>
         <section class="container-section">
             <div id="logo-conteudo">
-                <img src="/epps-landing-page1/img/f4bank.png" alt="">
+                <img src="./img/f4bank.png " alt="">
             </div>
 
             <div id="conteudo-home">
@@ -53,7 +53,7 @@
                 <img src="/epps-landing-page1/img/mulher-cartao2.jpg" id="img-pessoa" alt="">
             </div>
 
-            <div id="contaudo-section-botton">
+            <div id="conteudo-section-botton">
 
                 <h2>
                     Gostou? Quer saber mais sobre o nosso cartão?
