--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <img src="/epps-landing-page1/img/f4bank.png" id="img-logo" alt="">
                 </a>
             </div>
-            <div class="container-links">
+            <div class="container-links"> <!-- MENU -->
                 <ul>
                     <a href="#"><li>F4CARD</li></a>
                     <a href="#"><li>SOBRE</li></a>
