Criado link de redirecionamento para pagina home

--- a/produtos.html
+++ b/produtos.html
@@ -10,7 +10,7 @@
     <header class="container-header">
         <nav>
             <div class="logo">
-                <a href="#">
+                <a href="./index.html">
                     <img src="./img/f4bank.png" id="img-logo" alt="">
                 </a>
             </div>
