Criado o rodape da pagina produtos

--- a/produtos.html
+++ b/produtos.html
@@ -71,8 +71,12 @@
     </main>
 
     <footer>
-        <div>
-            rodapé
+        <div class="container-list-footer">
+            <ul>
+                <li><a href="#" target="blank"><img src="./img/intagram-logo.png" alt=""></a></li>
+                <li><a href="#" target="blank"><img src="./img/IconFacebook.png" alt=""></a></li>
+                <li><a href="#" target="blank"><img src="./img/IconTwitter.png" alt=""></a></li>
+            </ul>
         </div>
     </footer>
 </body>
