Comecei a mexer na página sobre a empresa e os serviços. Adicionei uma img.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
             <div id="conteudo-section-bottom">
                 <h2>
-                    Gostou? Quer saber mais sobre o nosso cartão?
+                    Gostou? Quer saber mais sobre quem somos e nossos serviços?
                     Clica no link abaixo para ter todas as informações sobre
                     como solicitar o mesmo! É rapidinho!
                 </h2>
