--- a/quem-somos.html
+++ b/quem-somos.html
@@ -3,9 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="quem-somos.css">
+    <title>Sobre</title>
 </head>
 <body>
-    
+    <header class="container-header">
+        <nav>
+            <div class="logo">
+                <a href="#">
+                    <img src="./img/f4bank.png" id="img-logo" alt="">
+                </a>
+            </div>
+            <div class="container-links"> <!-- MENU -->
+                <ul>
+                    <a href="./produtos.html"><li>F4CARD</li></a>
+                    <a href="#"><li>SOBRE</li></a>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <main id="main-sobre">
+       <section class="section-sobre">
+            <div id="box-1-section-sobre">
+                <h2>Quem somos?</h2>
+            </div>
+            <div>
+
+            </div>
+       </section>
+
+       <section class="section-sobre">
+            <div>
+
+            </div>
+            <div>
+            
+            </div>
+       </section>
+
+    </main>
+
+    <footer>
+        <div class="container-list-footer">
+            <ul>
+                <li><a href="#" target="blank"><img src="/epps-landing-page1/img/intagram-logo.png" alt=""></a></li>
+                <li><a href="#" target="blank"><img src="/epps-landing-page1/img/IconFacebook.png" alt=""></a></li>
+                <li><a href="#" target="blank"><img src="/epps-landing-page1/img/IconTwitter.png" alt=""></a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
