Feito layout e inserido imagens e informações sobre a empresa e o cartão. Ainda falta escolher fontes e finalizar a página do cartão.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="container-links"> <!-- MENU -->
                 <ul>
                     <a href="./produtos.html"><li>F4CARD</li></a>
-                    <a href="#"><li>SOBRE</li></a>
+                    <a href="quem-somos.html"><li>SOBRE</li></a>
                 </ul>
             </div>
         </nav>
@@ -66,7 +66,7 @@
 
                 <div>
                     <div class="box-link">
-                        <a href="#" target="blank">Saiba mais</a> <!-- Link para redirecionar para produtos -->
+                        <a href="produtos.html" target="blank">Saiba mais</a> <!-- Link para redirecionar para produtos -->
                     </div>
                 </div>
             </div>
