--- a/quem-somos.html
+++ b/quem-somos.html
@@ -10,7 +10,7 @@
     <header class="container-header">
         <nav>
             <div class="logo">
-                <a href="#">
+                <a href="index.html">
                     <img src="./img/f4bank.png" id="img-logo" alt="">
                 </a>
             </div>
@@ -24,21 +24,63 @@
     </header>
 
     <main id="main-sobre">
-       <section class="section-sobre">
+        <div class="title-sobre">
+            <h1>
+                Sobre a F4Bank e seus serviços
+            </h1>
+        </div>
+        <section class="section-sobre" id="section-sobre-1">
             <div id="box-1-section-sobre">
                 <h2>Quem somos?</h2>
             </div>
-            <div>
+            <div id="box-2-section-sobre">
+                <h3>
+                    Uma empresa com mais de 10 anos de mercado,
+                    que acredita que pessoas não são produtos nem 
+                    apenas números em um banco de dados. <br>
 
+                    Acreditamos, principalmente, que democratizar 
+                    o acesso à econômia é parte fundamental para 
+                    obliterar as desigualdades.<br>
+
+                    E para que isso de fato aconteça, uma parte do
+                    nosso orçamento é destinado para projetos que estão voltados
+                    para grupos minoritários e marginalizados. <br>
+                    
+                    Estamos aqui para todos, mas princinplamente 
+                    para os que mais precisam!
+                </h3>
             </div>
        </section>
 
-       <section class="section-sobre">
-            <div>
+       <h2>
+           O laranjinha
+       </h2>
+
+       <section class="section-sobre" id="section-sobre-2">
+            <div id="box-2-section-sobre-2">
 
             </div>
-            <div>
-            
+            <div id="box-3-section-sobre-2">
+                <h3>
+                    Percebemos e entendemos que nós, enquanto banco, já temos
+                    muitos privilégios e ganhos. O que nos levou a criar um cartão
+                    completamente sem juros e sem anuidade. Isso mesmo, 
+                    oferecemos uma plataforma totalmente gratuita para nossos clientes.
+                </h3>
+                <h3>
+                    Com o dinheiro que seria gasto com anuidade e jusros, sugerimos
+                    que seja poupado e gardado em sua conta poupança, um outro serviço
+                    que oferecemos. Além do cartão, tens uma conta totalmente online e segura,
+                    e que pode estar na palma da sua mão, através da App F4Bank.
+                </h3>
+                <h3>
+                    Nesta conta podes ver teus saldas, os detalhes de suas compras. 
+                    Pode realizar pagamentos e transferências. Tudo isso sem nenhum custo.
+                </h3>
+                <h3>
+                    Agilizamos sua conta e sua vida. Sem mais perder tempo em filas de banco.
+                </h3>
             </div>
        </section>
 
