--- a/quem-somos.html
+++ b/quem-somos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="quem-somos.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300;1,400&display=swap" rel="stylesheet">
     <title>Sobre</title>
 </head>
 <body>
@@ -34,53 +35,54 @@
                 <h2>Quem somos?</h2>
             </div>
             <div id="box-2-section-sobre">
-                <h3>
+                <p>
                     Uma empresa com mais de 10 anos de mercado,
                     que acredita que pessoas não são produtos nem 
-                    apenas números em um banco de dados. <br>
+                    apenas números em um banco de dados.
 
                     Acreditamos, principalmente, que democratizar 
                     o acesso à econômia é parte fundamental para 
-                    obliterar as desigualdades.<br>
+                    obliterar as desigualdades.
 
                     E para que isso de fato aconteça, uma parte do
                     nosso orçamento é destinado para projetos que estão voltados
-                    para grupos minoritários e marginalizados. <br>
+                    para grupos minoritários e marginalizados.
                     
                     Estamos aqui para todos, mas princinplamente 
                     para os que mais precisam!
-                </h3>
+                </p>
             </div>
        </section>
 
-       <h2>
-           O laranjinha
-       </h2>
-
        <section class="section-sobre" id="section-sobre-2">
-            <div id="box-2-section-sobre-2">
-
-            </div>
+            
             <div id="box-3-section-sobre-2">
-                <h3>
+                <p>
                     Percebemos e entendemos que nós, enquanto banco, já temos
                     muitos privilégios e ganhos. O que nos levou a criar um cartão
                     completamente sem juros e sem anuidade. Isso mesmo, 
                     oferecemos uma plataforma totalmente gratuita para nossos clientes.
-                </h3>
-                <h3>
+                </p>
+                <p>
                     Com o dinheiro que seria gasto com anuidade e jusros, sugerimos
                     que seja poupado e gardado em sua conta poupança, um outro serviço
                     que oferecemos. Além do cartão, tens uma conta totalmente online e segura,
                     e que pode estar na palma da sua mão, através da App F4Bank.
-                </h3>
-                <h3>
+                </p>
+                <p>
                     Nesta conta podes ver teus saldas, os detalhes de suas compras. 
                     Pode realizar pagamentos e transferências. Tudo isso sem nenhum custo.
-                </h3>
-                <h3>
+                </p>
+                <p>
                     Agilizamos sua conta e sua vida. Sem mais perder tempo em filas de banco.
-                </h3>
+                </p>
+            </div>
+
+            <div id="box-4-section-sobre-2">
+                <h2>
+                    O laranjinha
+                </h2>
+                <img src="./img/cartão.png" alt="">
             </div>
        </section>
 
