Feito toda parte de responsividade da página home. Responsividade compatível com tablets e telemóveis. Reposicionei alguns elementos também.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
     <header class="container-header">
         <nav>
             <div class="logo">
-                <a href="#">
-                    <img src="./img/f4bank.png" id="img-logo" alt="">
-                </a>
+                <img src="./img/f4bank.png" id="img-logo" alt="">
             </div>
-            <div class="container-links"> <!-- MENU -->
+            <div class="container-links"> 
                 <ul>
                     <a href="./produtos.html"><li>F4CARD</li></a>
                     <a href="quem-somos.html"><li>SOBRE</li></a>
@@ -27,11 +25,8 @@
 
     <main>
 
-        <section class="container-section">
-            <div id="logo-conteudo">
-                <img src="./img/f4bank.png " alt="">
-            </div>
-
+        <section class="container-section" id="section-above-all">
+           
             <div id="conteudo-home">
                 <p>
                     Em um cenário de tarifas e juros altos (mais alto do mundo) surge a F4Bank para, 
@@ -39,11 +34,15 @@
                     oferecer um serviço justo. Através da conta corrente digital F4Bank e cartão F4Bank sem taxa, 
                     descomplicaremos sua experiência financeira tornando-a ágil, simples e segura.</p>
             </div>
+
+            <div id="logo-conteudo">
+                <img src="./img/f4bank.png " id="img-logo-main" alt="">
+            </div>
         </section>
 
         <section class="container-section">
             <div id="container-center">
-                <img src="/epps-landing-page1/img/mulher-cartao1.jpg" id="img-main" alt="">
+                <img src="/epps-landing-page1/img/mulher-cartao1.jpg" class="img-mulher" alt="">
             </div>
             <div class="container-h2">
                 <div>
@@ -52,23 +51,24 @@
             </div>
         </section>
 
-        <section id="section-bottom">
+        <section  id="section-bottom">
             <div id="container-bottom">
-                <img src="/epps-landing-page1/img/mulher-cartao2.jpg" id="img-pessoa" alt="">
+                <img src="/epps-landing-page1/img/mulher-cartao2.jpg" class="img-mulher" alt="">
             </div>
 
-            <div id="conteudo-section-botton">
+            <div id="box-1-section-bottom">
 
-            <div id="conteudo-section-bottom">
-                <h2>
-                    Gostou? Quer saber mais sobre quem somos e nossos serviços?
-                    Clica no link abaixo para ter todas as informações sobre
-                    como solicitar o mesmo! É rapidinho!
-                </h2>
+                <div id="conteudo-section-bottom">
+                    <h2>
+                        Gostou? Quer saber mais sobre quem somos e nossos serviços?
+                        Clica no link abaixo para ter todas as informações sobre
+                        como solicitar o mesmo! É rapidinho!
+                    </h2>
 
-                <div>
-                    <div class="box-link">
-                        <a href="produtos.html" target="blank">Saiba mais</a> <!-- Link para redirecionar para produtos -->
+                    <div>
+                        <div class="box-link">
+                            <a href="produtos.html" target="blank">Saiba mais</a> <!-- Link para redirecionar para produtos -->
+                        </div>
                     </div>
                 </div>
             </div>
