Deixei a página do quem somos responsiva para tablets e telemóveis. Também alterei o css da página home, apara alinha com a do quem somos. Com isso, fica faltando apenas resolver as pendências da página de produtos.

--- a/quem-somos.html
+++ b/quem-somos.html
@@ -34,7 +34,7 @@
             <div id="box-1-section-sobre">
                 <h2>Quem somos?</h2>
             </div>
-            <div id="box-2-section-sobre">
+            <div class="box-2-section-sobre" id="conteudo-section-sobre-1">
                 <p>
                     Uma empresa com mais de 10 anos de mercado,
                     que acredita que pessoas não são produtos nem 
@@ -53,10 +53,10 @@
                 </p>
             </div>
        </section>
-
+       
        <section class="section-sobre" id="section-sobre-2">
             
-            <div id="box-3-section-sobre-2">
+            <div class="box-3-section-sobre-2" id="conteudo-section-sobre-2">
                 <p>
                     Percebemos e entendemos que nós, enquanto banco, já temos
                     muitos privilégios e ganhos. O que nos levou a criar um cartão
