Adicionado links das redes sociais e informação nos 'alts'. Adicionado :hover no botão 'saiba mais'.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="container-header">
         <nav>
             <div class="logo">
-                <img src="./img/f4bank.png" id="img-logo" alt="">
+                <img src="./img/f4bank.png" id="img-logo" alt="Logo do f4bank">
             </div>
             <div class="container-links"> 
                 <ul>
@@ -32,17 +32,18 @@
                     Em um cenário de tarifas e juros altos (mais alto do mundo) surge a F4Bank para, 
                     com a SEGURANÇA e credibilidade de décadas como banco público no Brasil, 
                     oferecer um serviço justo. Através da conta corrente digital F4Bank e cartão F4Bank sem taxa, 
-                    descomplicaremos sua experiência financeira tornando-a ágil, simples e segura.</p>
+                    descomplicaremos sua experiência financeira tornando-a ágil, simples e segura.
+                </p>
             </div>
 
             <div id="logo-conteudo">
-                <img src="./img/f4bank.png " id="img-logo-main" alt="">
+                <img src="./img/f4bank.png " id="img-logo-main" alt="Logo do f4bank">
             </div>
         </section>
 
         <section class="container-section">
             <div id="container-center">
-                <img src="/epps-landing-page1/img/mulher-cartao1.jpg" class="img-mulher" alt="">
+                <img src="./img/mulher-cartao1.jpg" class="img-mulher" alt="Mulher segurando um cartão de crédito">
             </div>
             <div class="container-h2">
                 <div>
@@ -53,7 +54,7 @@
 
         <section  id="section-bottom">
             <div id="container-bottom">
-                <img src="/epps-landing-page1/img/mulher-cartao2.jpg" class="img-mulher" alt="">
+                <img src="./img/mulher-cartao2.jpg" class="img-mulher" alt="Mulher segurando um cartão de crédito">
             </div>
 
             <div id="box-1-section-bottom">
@@ -79,9 +80,9 @@
     <footer>
         <div class="container-list-footer">
             <ul>
-                <li><a href="#" target="blank"><img src="/epps-landing-page1/img/intagram-logo.png" alt=""></a></li>
-                <li><a href="#" target="blank"><img src="/epps-landing-page1/img/IconFacebook.png" alt=""></a></li>
-                <li><a href="#" target="blank"><img src="/epps-landing-page1/img/IconTwitter.png" alt=""></a></li>
+                <li><a href="https://www.instagram.com/" target="blank"><img src="/epps-landing-page1/img/intagram-logo.png" alt="Link para o instagram."></a></li>
+                <li><a href="https://www.facebook.com/" target="blank"><img src="/epps-landing-page1/img/IconFacebook.png" alt="Link para o facebook."></a></li>
+                <li><a href="https://twitter.com/" target="blank"><img src="/epps-landing-page1/img/IconTwitter.png" alt="Link para o twitter"></a></li>
             </ul>
         </div>
     </footer>
