--- a/quem-somos.html
+++ b/quem-somos.html
@@ -12,7 +12,7 @@
         <nav>
             <div class="logo">
                 <a href="index.html">
-                    <img src="./img/f4bank.png" id="img-logo" alt="">
+                    <img src="./img/f4bank.png" id="img-logo" alt="Logo do f4bank.">
                 </a>
             </div>
             <div class="container-links"> <!-- MENU -->
@@ -53,7 +53,7 @@
                 </p>
             </div>
        </section>
-       
+
        <section class="section-sobre" id="section-sobre-2">
             
             <div class="box-3-section-sobre-2" id="conteudo-section-sobre-2">
@@ -82,7 +82,7 @@
                 <h2>
                     O laranjinha
                 </h2>
-                <img src="./img/cartão.png" alt="">
+                <img src="./img/cartão.png" alt="Imagem de um cartão de crédito.">
             </div>
        </section>
 
@@ -91,9 +91,9 @@
     <footer>
         <div class="container-list-footer">
             <ul>
-                <li><a href="#" target="blank"><img src="/epps-landing-page1/img/intagram-logo.png" alt=""></a></li>
-                <li><a href="#" target="blank"><img src="/epps-landing-page1/img/IconFacebook.png" alt=""></a></li>
-                <li><a href="#" target="blank"><img src="/epps-landing-page1/img/IconTwitter.png" alt=""></a></li>
+                <li><a href="https://www.instagram.com/" target="blank"><img src="/epps-landing-page1/img/intagram-logo.png" alt="Link para o instagram"></a></li>
+                <li><a href="https://www.facebook.com/" target="blank"><img src="/epps-landing-page1/img/IconFacebook.png" alt="Link para o facebook"></a></li>
+                <li><a href="https://twitter.com/" target="blank"><img src="/epps-landing-page1/img/IconTwitter.png" alt="Link para o twitter"></a></li>
             </ul>
         </div>
     </footer>
