Estilizando a pagina produtos - cabecalho, rodape e formulario de cartao

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300;1,400&display=swap" rel="stylesheet">
-    <title>F4Bank</title>
+    <title>F4Bank-Home</title>
 </head>
 <body>
     <header class="container-header">
@@ -80,9 +80,9 @@
     <footer>
         <div class="container-list-footer">
             <ul>
-                <li><a href="https://www.instagram.com/" target="blank"><img src="/epps-landing-page1/img/intagram-logo.png" alt="Link para o instagram."></a></li>
-                <li><a href="https://www.facebook.com/" target="blank"><img src="/epps-landing-page1/img/IconFacebook.png" alt="Link para o facebook."></a></li>
-                <li><a href="https://twitter.com/" target="blank"><img src="/epps-landing-page1/img/IconTwitter.png" alt="Link para o twitter"></a></li>
+                <li><a href="https://www.instagram.com/" target="blank"><img src="./img/intagram-logo.png" alt="Link para o instagram."></a></li>
+                <li><a href="https://www.facebook.com/" target="blank"><img src="./img/IconFacebook.png" alt="Link para o facebook."></a></li>
+                <li><a href="https://twitter.com/" target="blank"><img src="./img/IconTwitter.png" alt="Link para o twitter"></a></li>
             </ul>
         </div>
     </footer>
