--- a/produtos.html
+++ b/produtos.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="produtos.css">
-    <title>F4Bank</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300;1,400&display=swap" rel="stylesheet">
+    <title>F4Bank-Produtos</title>
 </head>
 <body>
     <header class="container-header">
         <nav>
             <div class="logo">
-                <a href="./index.html">
-                    <img src="./img/f4bank.png" id="img-logo" alt="">
-                </a>
+                <a href="./index.html"><img src="./img/f4bank.png" id="img-logo" alt="Logo do f4bank"></a>
             </div>
-            <div class="container-links">
+            <div class="container-links"> 
                 <ul>
-                    <a href="./produtos.html"><li>F4CARD</li></a>
-                    <a href="#"><li>SOBRE</li></a>
+                    <a href="#"><li>F4CARD</li></a>
+                    <a href="./quem-somos.html"><li>SOBRE</li></a>
                 </ul>
             </div>
         </nav>
@@ -35,7 +35,7 @@
                 Peça a sua conta e seu cartão de credito
                 <form action="" class="adquirir-form">
                     <input type="text" placeholder="CPF">
-                    <button>Adquirir</button>
+                    <button type="button">Adquirir</button>
                 </form> 
             </div>
         </section>
@@ -54,28 +54,20 @@
 
             <div id="conteudo-section-botton">
                 <h2>
-                    Gostou? Quer saber mais sobre o nosso cartão?
-                    Clica no link abaixa para ter todas as informações
-                    de como solicitar o mesmo! É rapidinho!
+                    Faça parte da nossa comunidade F4Clientes e F4Rewards!
+                    Nelas você encontrá dicas de investimentos para todos os tipos de perfil.
+                    Além do nosso programa de pontução e regaste com diversos parceiros.
                 </h2>
-                <!-- <form action="#">
-                    <label for="nome">Nome: </label>
-                    <input type="text" name="nome" id="nome">
-
-                    <label for="email">E-mail: </label>
-                    <input type="email" name="email" id="email">
-                </form> -->
             </div>
-        </section>
-        
+        </section>        
     </main>
 
     <footer>
         <div class="container-list-footer">
             <ul>
-                <li><a href="#" target="blank"><img src="./img/intagram-logo.png" alt=""></a></li>
-                <li><a href="#" target="blank"><img src="./img/IconFacebook.png" alt=""></a></li>
-                <li><a href="#" target="blank"><img src="./img/IconTwitter.png" alt=""></a></li>
+                <li><a href="https://www.instagram.com/" target="blank"><img src="./img/intagram-logo.png" alt="Link para o instagram."></a></li>
+                <li><a href="https://www.facebook.com/" target="blank"><img src="./img/IconFacebook.png" alt="Link para o facebook."></a></li>
+                <li><a href="https://twitter.com/" target="blank"><img src="./img/IconTwitter.png" alt="Link para o twitter"></a></li>
             </ul>
         </div>
     </footer>
