Corrigido a exibicao das sections em dispositivos mobile

--- a/produtos.html
+++ b/produtos.html
@@ -1,42 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="produtos.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300;1,400&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300;1,400&display=swap"
+        rel="stylesheet">
     <title>F4Bank-Produtos</title>
 </head>
+
 <body>
     <header class="container-header">
         <nav>
             <div class="logo">
                 <a href="./index.html"><img src="./img/f4bank.png" id="img-logo" alt="Logo do f4bank"></a>
             </div>
-            <div class="container-links"> 
+            <div class="container-links">
                 <ul>
-                    <a href="#"><li>F4CARD</li></a>
-                    <a href="./quem-somos.html"><li>SOBRE</li></a>
+                    <a href="#">
+                        <li>F4CARD</li>
+                    </a>
+                    <a href="./quem-somos.html">
+                        <li>SOBRE</li>
+                    </a>
                 </ul>
             </div>
         </nav>
     </header>
 
     <main>
-        <section id="app-background" class="container-section"> <!-- Mensagem  -->
+        <section id="app-background" class="container-section">
+            <!-- Mensagem  -->
             <div id="conteudo1-home">
                 Tudo que vc precisa na palma de sua mão. Faça pagamentos,depósitos e transferencias
                 sem complicação e filas. Tudo pelo
-                AppF4Bank!!!  
-            </div>            
+                AppF4Bank!!!
+            </div>
 
             <div id="conteudo2-home">
                 Peça a sua conta e seu cartão de credito
                 <form action="" class="adquirir-form">
                     <input type="text" placeholder="CPF">
                     <button type="button">Adquirir</button>
-                </form> 
+                </form>
             </div>
         </section>
         <section id="img-main" class="container-section">
@@ -59,17 +68,21 @@
                     Além do nosso programa de pontução e regaste com diversos parceiros.
                 </h2>
             </div>
-        </section>        
+        </section>
     </main>
 
     <footer>
         <div class="container-list-footer">
             <ul>
-                <li><a href="https://www.instagram.com/" target="blank"><img src="./img/intagram-logo.png" alt="Link para o instagram."></a></li>
-                <li><a href="https://www.facebook.com/" target="blank"><img src="./img/IconFacebook.png" alt="Link para o facebook."></a></li>
-                <li><a href="https://twitter.com/" target="blank"><img src="./img/IconTwitter.png" alt="Link para o twitter"></a></li>
+                <li><a href="https://www.instagram.com/" target="blank"><img src="./img/intagram-logo.png"
+                            alt="Link para o instagram."></a></li>
+                <li><a href="https://www.facebook.com/" target="blank"><img src="./img/IconFacebook.png"
+                            alt="Link para o facebook."></a></li>
+                <li><a href="https://twitter.com/" target="blank"><img src="./img/IconTwitter.png"
+                            alt="Link para o twitter"></a></li>
             </ul>
         </div>
     </footer>
 </body>
+
 </html>
