Retirado códigos comentados e alterado caminho dos imagens do footer de quem-somos.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
                     <div>
                         <div class="box-link">
-                            <a href="produtos.html" target="blank">Saiba mais</a> <!-- Link para redirecionar para produtos -->
+                            <a href="produtos.html" target="blank">Saiba mais</a> 
                         </div>
                     </div>
                 </div>
