--- a/quem-somos.html
+++ b/quem-somos.html
@@ -15,7 +15,7 @@
                     <img src="./img/f4bank.png" id="img-logo" alt="Logo do f4bank.">
                 </a>
             </div>
-            <div class="container-links"> <!-- MENU -->
+            <div class="container-links"> 
                 <ul>
                     <a href="./produtos.html"><li>F4CARD</li></a>
                     <a href="#"><li>SOBRE</li></a>
@@ -91,9 +91,9 @@
     <footer>
         <div class="container-list-footer">
             <ul>
-                <li><a href="https://www.instagram.com/" target="blank"><img src="/epps-landing-page1/img/intagram-logo.png" alt="Link para o instagram"></a></li>
-                <li><a href="https://www.facebook.com/" target="blank"><img src="/epps-landing-page1/img/IconFacebook.png" alt="Link para o facebook"></a></li>
-                <li><a href="https://twitter.com/" target="blank"><img src="/epps-landing-page1/img/IconTwitter.png" alt="Link para o twitter"></a></li>
+                <li><a href="https://www.instagram.com/" target="blank"><img src="./img/intagram-logo.png" alt="Link para o instagram"></a></li>
+                <li><a href="https://www.facebook.com/" target="blank"><img src="./img/IconFacebook.png" alt="Link para o facebook"></a></li>
+                <li><a href="https://twitter.com/" target="blank"><img src= "./img/IconTwitter.png" alt="Link para o twitter"></a></li>
             </ul>
         </div>
     </footer>
